--- a/shipment-service/src/main/resources/application.properties
+++ b/shipment-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 thirdparty.tracking.service.baseURL=https://api.aftership.com/v4/
 thirdparty.tracking.service.trackingAPI=trackings
 thirdparty.tracking.service.api-key=e2112a4b-4f0d-41f4-b3b3-59a4fd3771ad
+logging.file=D:\\codebase\\assignment\\shipment-service\\log\\spring-boot-elk.log
 
 
 
